--- a/tests/Hangfire.ActivationExtensions.Tests/packages.config
+++ b/tests/Hangfire.ActivationExtensions.Tests/packages.config
@@ -2,7 +2,10 @@
 <packages>
   <package id="AutoFixture" version="3.50.2" targetFramework="net45" />
   <package id="FluentAssertions" version="4.14.0" targetFramework="net45" />
+  <package id="Hangfire.Core" version="1.6.5" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
