--- a/src/Hangfire.ActivationExtensions/Hangfire.ActivationExtensions.csproj
+++ b/src/Hangfire.ActivationExtensions/Hangfire.ActivationExtensions.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Interceptor\IJobActivatorFilter.cs" />
     <Compile Include="Interceptor\JobActivatorFilterCollection.cs" />
     <Compile Include="Interceptor\PassThroughJobActivator.cs" />
+    <Compile Include="Interceptor\PassThroughScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
