--- a/tests/Hangfire.ActivationExtensions.Tests/Hangfire.ActivationExtensions.Tests.csproj
+++ b/tests/Hangfire.ActivationExtensions.Tests/Hangfire.ActivationExtensions.Tests.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalConfigurationExtensionsFacts.cs" />
     <Compile Include="Hangfire\InternalFacts.cs" />
     <Compile Include="Hangfire\JobFixture.cs" />
     <Compile Include="Interceptor\PassThroughJobActivatorFacts.cs" />
