Refactoring, edge case checking.

--- a/src/Hangfire.ActivationExtensions/Hangfire.ActivationExtensions.csproj
+++ b/src/Hangfire.ActivationExtensions/Hangfire.ActivationExtensions.csproj
@@ -55,7 +55,7 @@
     <Compile Include="GlobalConfigurationExtensions.cs" />
     <Compile Include="Interceptor\IJobActivatorFilter.cs" />
     <Compile Include="Interceptor\JobActivatorFilterCollection.cs" />
-    <Compile Include="Interceptor\PassThroughJobActivator.cs" />
+    <Compile Include="Interceptor\PassThroughActivator.cs" />
     <Compile Include="Interceptor\PassThroughScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
