--- a/tests/Hangfire.ActivationExtensions.Tests/Hangfire.ActivationExtensions.Tests.csproj
+++ b/tests/Hangfire.ActivationExtensions.Tests/Hangfire.ActivationExtensions.Tests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Hangfire\InternalFacts.cs" />
     <Compile Include="Hangfire\JobFixture.cs" />
     <Compile Include="Helpers\ClassStaticLockAttribute.cs" />
+    <Compile Include="Helpers\HangfirePerformerHelper.cs" />
     <Compile Include="Helpers\UseCurrentJobActivatorAttribute.cs" />
     <Compile Include="Interceptor\PassThroughActivatorFacts.cs" />
     <Compile Include="Interceptor\PassThroughScropeFacts.cs" />
